k8s/platform/data-services/ddbb/postgres/pgadmin-env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin4-v1-62-0
  labels:
    part-of: microservices-platform
spec:
  template:
    spec:
      containers:
        - name: pgadmin # Nombre del container principal
