k8s/platform/data-services/ddbb/postgres/postgres-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-zero-trust
  namespace: data-services
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql # Ajusta según tu chart
  policyTypes:
    - Ingress
  ingress:
    # 1. GitLab Webservice
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: repositories
          podSelector:
            matchLabels:
              app: gitlab-webservice-default # Etiqueta específica del pod de GitLab
      ports:
        - port: 5432
    # 2. SonarQube
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: devops-tools
          podSelector:
            matchLabels:
              app.kubernetes.io/name: sonarqube
      ports:
        - port: 5432
    # 3. Artifactory
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: devops-tools
          podSelector:
            matchLabels:
              app.kubernetes.io/name: artifactory
    # 4. pgadmin (Mismo namespace, necesita acceso a la base de datos)
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: data-services
          podSelector:
            matchLabels:
              app.kubernetes.io/name: pgadmin4 # La etiqueta que le da el chart de Runix
      ports:
        - port: 5432
